css, js files added

--- a/Day-7-8/Day-8 Que-1.html
+++ b/Day-7-8/Day-8 Que-1.html
@@ -15,16 +15,16 @@
           onkeyup="searchProduct(this.value)"
           placeholder="Search For Products"
         />
-      </div>
-      <h4>
-      <div class="pricetags" ><h5>Minimum:</h5>
+      
+      
+      <div class="pricetags" ><h4>Search for Minimum Price:</h5>
         <input
           type="search"
           onkeyup="searchForMinPrice(this.value)"
           placeholder="Minimum Price"
           id="minprice"
         /></div><div class="pricetags">
-      <h5>Maximum:</h5>
+      <h4>Search for Maximum Price:</h5>
         <input
           type="search"
           onkeyup="searchForMaxPrice(this.value)"
@@ -33,6 +33,7 @@
         />
       </div>
     </h4>
+  </div>
 
     </div>
 
