--- a/Day-7-8/Day-8 Que-1.html
+++ b/Day-7-8/Day-8 Que-1.html
@@ -5,8 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="d8q1styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@1,500&display=swap" rel="stylesheet">
   </head>
   <body>
+    <div class="modal" onclick="hideModal(event)">
+      <div class="modalchild">
+        <div class="note">
+            <h3 class="notetext">You  have  selected  a  product  again. We  have  all  products  having  Quantity 1.<br>
+            But  You  can  select  other  products  of  your  choise  from  given  list  of  products.</h3><br>
+            <button class="alert" onclick="hidemodal()">OK</button>
+        </div>
+      </div>
+    </div>
     <div class="header">
       <h1>Shopping 360</h1>
       <div class="search">
@@ -42,10 +52,12 @@
     </div>
 
     <div class="products">
-      <h1>Cart</h1><h3 id="cartitems"></h3>
+      <h1>Cart</h1><h3 id="cartitems">Total Cart Items : 0</h3>
       <div class="productwrapper" id="cart"></div>
     </div>
 
     <script src="shopping.js"></script>
   </body>
 </html>
+
+
